# jmsd_tpc_sfml

./: .gitmodules  CMakeLists.txt  README.md
_tpc_cmake_settings/: tpc-sfml-lib-set-compiler-settings.cmake
_tpc_cmake_settings/compiler-settings/: tpc-sfml-common-set-windows-compiler-settings.cmake  tpc-sfml-lib-set-windows-compiler-settings.cmake
tpc_sfml/: CMakeLists.txt
